<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/rowParentLayout" >

    <ImageView
        android:id="@+id/rowTurntableIcon"
        style="@style/rowIcon"
        android:contentDescription="@string/iconContentDescription"
        app:srcCompat="@drawable/ic_turntable" />

    <LinearLayout
        android:layout_weight="1"
        style="@style/rowVerticalLayout" >

        <TextView
            android:id="@+id/rowTurntableName"
            style="@style/rowTurntableNameText"
            android:text="@string/noData" />

        <TextView
            android:id="@+id/rowTurntableLocation"
            style="@style/rowTurntableLocationText"
            android:text="@string/noData" />

        <TextView
            android:id="@+id/rowTurntableStatus"
            style="@style/rowTextView"
            android:text="@string/noData" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="2"
        style="@style/rowVerticalLayout">

        <TextView
            android:id="@+id/rowTurntableLength"
            style="@style/rowTurntableLengthText"
            android:text="@string/zero" />

        <TextView
            android:id="@+id/rowTurntablePower"
            style="@style/rowTurntablePowerText"
            android:text="@string/noData" />

    </LinearLayout>

</LinearLayout>